--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -6,12 +6,12 @@
               <img src="../../../../../assets/img/logo3.png" alt="Logo de la aplicación" width="100%">
             </div>
         <mat-nav-list >
-        <button *ngIf="isAdmin() || isRecep()" routerLink="./home" class="hover-orange transparent-button">
+        <button *ngIf="isAdmin() || isRecep()" routerLink="./home" class="hover-orange transparent-button" [class.active]="isRouteActive('/home')">
             <mat-icon>home</mat-icon> 
             Inicio 
         </button>
         
-        <button *ngIf="isSupadmin()" routerLink="./listaSucursales" class="hover-orange transparent-button"> 
+        <button *ngIf="isSupadmin()" routerLink="./listaSucursales" class="hover-orange transparent-button" [class.active]="isRouteActive('/listaSucursales')"> 
             <mat-icon>location_on</mat-icon> 
             Sucursales 
         </button>
@@ -21,57 +21,57 @@
             Productos en línea 
         </button>--> 
         
-        <button *ngIf="isSupadmin()" routerLink="./estadisticas" class="hover-orange transparent-button">  
+        <button *ngIf="isSupadmin()" routerLink="./estadisticas" class="hover-orange transparent-button" [class.active]="isRouteActive('/estadisticas')">  
             <mat-icon>bar_chart</mat-icon> 
             Reportes 
         </button>
         
-        <button  *ngIf="isAdmin()" (click)="navigateToServicios()" class="hover-orange transparent-button"> 
+        <button  *ngIf="isAdmin()" routerLink="./misServicios" class="hover-orange transparent-button" [class.active]="isRouteActive('/misServicios')"> 
             <mat-icon>settings</mat-icon> 
             Servicios 
         </button>
         
-        <button  *ngIf="isAdmin()" (click)="navigateToMembresias()" class="hover-orange transparent-button"> 
+        <button  *ngIf="isAdmin()" routerLink="./misMembresias" class="hover-orange transparent-button" [class.active]="isRouteActive('/misMembresias')"> 
             <mat-icon>people</mat-icon> 
             Membresías 
         </button>
         
-        <button *ngIf="isAdmin()" routerLink="./plan" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin()" routerLink="./plan" class="hover-orange transparent-button" [class.active]="isRouteActive('/plan')"> 
             <mat-icon>date_range</mat-icon> 
             Planes 
         </button>
         
-        <button *ngIf="isAdmin()" routerLink="./productos" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin()" routerLink="./productos" class="hover-orange transparent-button" [class.active]="isRouteActive('/productos')"> 
             <mat-icon>shopping_cart</mat-icon> 
             Productos 
         </button>
         
-        <button *ngIf="isAdmin()" routerLink="./entradas" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin()" routerLink="./entradas" class="hover-orange transparent-button" [class.active]="isRouteActive('/entradas')"> 
             <mat-icon>shopping_basket</mat-icon> 
             Compras 
         </button>
         
-        <button *ngIf="isAdmin() || isRecep()" routerLink="./verCorte" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin() || isRecep()" routerLink="./verCorte" class="hover-orange transparent-button" [class.active]="isRouteActive('/verCorte')"> 
             <mat-icon>attach_money</mat-icon> 
             Ventas 
         </button>
         
-        <button *ngIf="isAdmin()" routerLink="./colaboradores" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin()" routerLink="./colaboradores" class="hover-orange transparent-button" [class.active]="isRouteActive('/colaboradores')"> 
             <mat-icon>group</mat-icon> 
             Colaborador 
         </button>
         
-        <button *ngIf="isAdmin()" routerLink="./productosVendidos" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin()" routerLink="./productosVendidos" class="hover-orange transparent-button" [class.active]="isRouteActive('/productosVendidos')"> 
             <mat-icon>local_grocery_store</mat-icon> 
             Productos vendidos 
         </button>
         
-        <button *ngIf="isAdmin() || isRecep()" routerLink="./inventarios" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin() || isRecep()" routerLink="./inventarios" class="hover-orange transparent-button" [class.active]="isRouteActive('/inventarios')"> 
             <mat-icon>storage</mat-icon> 
             Inventario 
         </button>
         
-        <button *ngIf="isAdmin() || isRecep()" routerLink="./listaMembresias" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin() || isRecep()" routerLink="./listaMembresias" class="hover-orange transparent-button" [class.active]="isRouteActive('/listaMembresias')"> 
             <mat-icon>person</mat-icon> 
             Socios 
         </button>
@@ -82,14 +82,14 @@
         </button>
 
         <a href="{{url}}">
-        <button *ngIf="isAdmin() || isRecep()" (click)="abrirAcceso()" class="hover-orange transparent-button"> 
+        <button *ngIf="isAdmin() || isRecep()" (click)="abrirAcceso()" class="hover-orange transparent-button" > 
             <mat-icon>person</mat-icon> 
             Acceso manual
             <!--<a href="{{url}}"></a>-->
         </button>
         </a>
         
-        <button (click)="logoutBS()" class="hover-orange transparent-button">  
+        <button (click)="logoutBS()" class="hover-orange transparent-button" [class.active]="isRouteActive('/plan')">  
             <mat-icon>power_settings_new</mat-icon> 
             Cerrar sesión 
         </button>
