--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
                 <mat-label>Email</mat-label>
 
                 <input type="email" matInput placeholder="Email" autocomplete="off" autofocus="" required
-                  formControlName="username" />
+                  formControlName="email" />
 
                 <mat-icon matSuffix>alternate_email</mat-icon>
                 <mat-error *ngIf="loginForm.get('username')?.invalid">{{
@@ -25,7 +25,7 @@
             <p>
               <mat-form-field appearance="outline" class="inputs_css">
                 <mat-label>Contraseña</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" placeholder="Contraseña" formControlName="password"
+                <input matInput [type]="hide ? 'password' : 'text'" placeholder="Contraseña" formControlName="pass"
                   required />
                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                   [attr.aria-pressed]="hide">
