--- a/src/app/modules/registro/registro.component.html
+++ b/src/app/modules/registro/registro.component.html
@@ -308,7 +308,7 @@
               </form>
            </div>
            <div mat-dialog-actions fxLayoutAlign="center center">
-            <button mat-button (click)="registrar()" mat-raised-button style="background: #fd9727; color: white; width: 20%;">
+            <button mat-button (click)="registrarUsuario()" mat-raised-button style="background: #fd9727; color: white; width: 20%;">
               ¡Registrar!
             </button>
             <button  mat-button (click)="cerrarDialogo()" mat-raised-button style="background: #000000; color: white; width: 20%;">Cerrar</button>
